<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2014 Nordic Semiconductor. All Rights Reserved.
  
  The information contained herein is property of Nordic Semiconductor ASA.
  Terms and conditions of usage are described in detail in NORDIC SEMICONDUCTOR STANDARD SOFTWARE LICENSE AGREEMENT.
  Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
  This heading must NOT be removed from the file.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/dfu_settings_dfu" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_packet_receipt_notification_enabled"
            android:title="@string/dfu_settings_dfu_packets_receipt_notification_label" />

        <EditTextPreference
            android:defaultValue="10"
            android:dependency="settings_packet_receipt_notification_enabled"
            android:inputType="number"
            android:key="settings_number_of_packets"
            android:title="@string/dfu_settings_dfu_number_of_packets_label" />
	    <EditTextPreference
	        android:defaultValue="4096"
	        android:inputType="number"
	        android:key="settings_mbr_size"
	        android:dialogTitle="@string/dfu_settings_dfu_mbr_size_title"
	        android:title="@string/dfu_settings_dfu_mbr_size" />

        <no.nordicsemi.android.nrfbeacon.dfu.settings.AboutDfuPreference
            android:summary="@string/dfu_settings_dfu_about_summary"
            android:title="@string/dfu_settings_dfu_about" />
    </PreferenceCategory>

</PreferenceScreen>
