<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2014 Nordic Semiconductor. All Rights Reserved.
  
  The information contained herein is property of Nordic Semiconductor ASA.
  Terms and conditions of usage are described in detail in NORDIC SEMICONDUCTOR STANDARD SOFTWARE LICENSE AGREEMENT.
  Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
  This heading must NOT be removed from the file.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The size of text below must be fixed, therefore dp are used instead of sp -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/config_title_left_margin"
        android:rotation="270"
        android:text="@string/beacon_config"
        android:textColor="@color/darkGray"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feature_horizontal_margin"
            android:layout_marginRight="@dimen/feature_horizontal_margin"
            android:layout_marginTop="@dimen/feature_vertical_margin_top"
            android:hint="@string/settings_name_hint"
            android:imeOptions="flagNoExtractUi|actionDone"
            android:padding="3dp"
            android:singleLine="true" />

        <!-- Identity section -->

        <LinearLayout
            style="@style/Widget.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feature_horizontal_margin"
            android:layout_marginRight="@dimen/feature_horizontal_margin"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                style="@style/Widget.ListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_identity_title" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/feature_section_padding"
                android:paddingRight="@dimen/feature_section_padding" >

                <TableRow
                    android:layout_width="match_parent"
            		android:layout_height="@dimen/row_height"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/row_height" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_uuid" />

                    <TextView
                        android:id="@+id/uuid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:freezesText="true"
                        android:gravity="right"
                        android:textSize="@dimen/uuid_textSize" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
            		android:layout_height="@dimen/row_height"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/row_height" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_major" />

                    <TextView
                        android:id="@+id/major"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:freezesText="true"
                        android:gravity="right"
                        android:textSize="26sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
            		android:layout_height="@dimen/row_height"
                    android:minHeight="@dimen/row_height" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/settings_minor" />

                    <TextView
                        android:id="@+id/minor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:freezesText="true"
                        android:gravity="right"
                        android:textSize="26sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <!-- Identity section -->

        <LinearLayout
            style="@style/Widget.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feature_horizontal_margin"
            android:layout_marginRight="@dimen/feature_horizontal_margin"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                style="@style/Widget.ListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notify_title" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/event_container"
                    android:layout_width="match_parent"
            		android:layout_height="@dimen/row_height"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/row_height"
                    android:paddingLeft="@dimen/feature_section_padding"
                    android:paddingRight="@dimen/feature_section_padding" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/settings_event" />

                    <TextView
                        android:id="@+id/event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:drawablePadding="6dp"
                        android:drawableRight="@drawable/ic_event_small"
                        android:freezesText="true"
                        android:gravity="right|center_vertical" />
                </TableRow>

                <TableRow
                    android:id="@+id/action_container"
                    android:layout_width="match_parent"
            		android:layout_height="@dimen/row_height"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/row_height"
                    android:paddingLeft="@dimen/feature_section_padding"
                    android:paddingRight="@dimen/feature_section_padding" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/settings_action" />

                    <TextView
                        android:id="@+id/action"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:drawablePadding="6dp"
                        android:drawableRight="@drawable/ic_action_small"
                        android:freezesText="true"
                        android:gravity="right|center_vertical" />
                </TableRow>

                <TableRow
                    android:id="@+id/action_param_container"
                    android:layout_width="match_parent"
            		android:layout_height="@dimen/row_height"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/row_height"
                    android:paddingLeft="@dimen/feature_section_padding"
                    android:paddingRight="@dimen/feature_section_padding" >

                    <TextView
                        android:id="@+id/action_param_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/settings_action_param_url" />

                    <TextView
                        android:id="@+id/action_param"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:freezesText="true"
                        android:gravity="right"
                        android:singleLine="true" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <!-- Status section -->

        <LinearLayout
            style="@style/Widget.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feature_horizontal_margin"
            android:layout_marginRight="@dimen/feature_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical" >

            <TextView
                style="@style/Widget.ListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_status_title" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/enable"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
            	android:textColor="?android:attr/textColorTertiary"
                android:checked="true"
                android:padding="@dimen/feature_section_padding"
                android:text="@string/settings_enabled" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>