<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2014 Nordic Semiconductor. All Rights Reserved.
  
  The information contained herein is property of Nordic Semiconductor ASA.
  Terms and conditions of usage are described in detail in NORDIC SEMICONDUCTOR STANDARD SOFTWARE LICENSE AGREEMENT.
  Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
  This heading must NOT be removed from the file.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:orientation="horizontal"
    android:padding="8dp" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:max="100"
            android:progress="30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress"
            android:text="@string/far"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress"
            android:layout_centerHorizontal="true"
            android:text="@string/near"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/progress"
            android:text="@string/close"
            android:textSize="12sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/event"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_event" />

    <ImageView
        android:id="@+id/action"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical" />

</LinearLayout>
